# ChangeLog for x11-plugins/desklet-ftb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/desklet-ftb/ChangeLog,v 1.15 2009/04/29 01:49:28 nixphoeni Exp $

  29 Apr 2009; Joe Sapp <nixphoeni@gentoo.org> desklet-ftb-0.3.2:
  Set SRC_URI and HOMEPAGE to the unofficial archive

  28 Apr 2009; Joe Sapp <nixphoeni@gentoo.org> -desklet-ftb-0.3.ebuild,
  -desklet-ftb-0.3.1.ebuild, desklet-ftb-0.3.2:
  MY_P no longer needs to be defined since it's done in the eclass - just
  have to define DESKLET_NAME before inheriting it. RDEPEND does not need to
  be redefined since it's in the eclass too, so I removed it. Also quoted
  like a good dev.  Finally, removed old crusty versions.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  14 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  desklet-ftb-0.3.2.ebuild:
  Stable on ia64.

  06 Oct 2006; <nixnut@gentoo.org> desklet-ftb-0.3.2.ebuild:
  Stable on ppc wrt bug 103966

  10 Jul 2006; Thomas Cort <tcort@gentoo.org> desklet-ftb-0.3.2.ebuild:
  Stable on alpha wrt Bug #103966.

  27 May 2006; Thomas Cort <tcort@gentoo.org> desklet-ftb-0.3.2.ebuild:
  Added ~alpha keyword wrt Bug #103966.

  24 Mar 2006; Aron Griffis <agriffis@gentoo.org> desklet-ftb-0.3.2.ebuild:
  Mark 0.3.2 ~ia64

  16 Jan 2006; Joe Sapp <nixphoeni@gentoo.org> desklet-ftb-0.3.2.ebuild:
  Updated HOMEPAGE and SRC_URI to reflect new gDesklets website

*desklet-ftb-0.3.2 (27 Nov 2005)

  27 Nov 2005; Joe Sapp <nixphoeni@gentoo.org> +desklet-ftb-0.3.2.ebuild:
  Version bump

  21 Sep 2005; Homer Parker <hparker@gentoo.org> desklet-ftb-0.3.1.ebuild:
  Marked ~amd64.

*desklet-ftb-0.3.1 (30 Aug 2005)

  30 Aug 2005; Joe Sapp <nixphoeni@gentoo.org> +desklet-ftb-0.3.1.ebuild:
  Version bump, added a hack to adjust the downloaded filename to use a comma
  for the build version (1)

  31 Jul 2005; David Holm <dholm@gentoo.org> desklet-ftb-0.3.ebuild:
  Added to ~ppc.
