@@ -1,6 +1,11 @@
 # ChangeLog for x11-plugins/desklet-justanicon
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/desklet-justanicon/ChangeLog,v 1.10 2009/04/30 22:32:40 nixphoeni Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/desklet-justanicon/ChangeLog,v 1.11 2009/11/15 20:44:40 nixphoeni Exp $
+
+  15 Nov 2009; Joe Sapp <nixphoeni@gentoo.org>
+  desklet-justanicon-0.2.ebuild:
+  Keyworded ~sparc and ~ppc64 since gnome-extra/gdesklets-core supports
+  those ARCHes
 
   30 Apr 2009; Joe Sapp <nixphoeni@gentoo.org> desklet-justanicon-0.2:
   Keyworded ~amd64
